--- a/navigation-hierarchy.html
+++ b/navigation-hierarchy.html
@@ -3,11 +3,11 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Diagram Editor UI Spikes &mdash; Navigation &mdash; Hierarchy</title>
-    <link type="text/css" href="/theme/css/main.css" rel="stylesheet">
+    <link type="text/css" href="https://melleb.github.io/ui-spikes/theme/css/main.css" rel="stylesheet">
   </head>
   <body>
     <header>
-      <h1><a href="/index.html">Diagram Editor UI Spikes</a></h1>
+      <h1><a href="https://melleb.github.io/ui-spikes/index.html">Diagram Editor UI Spikes</a></h1>
       <nav>
 	<ul>
 	  <li>
