--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     </p>
     <ul>
-      <li><a href="navigation-hierarchical.html">Element traversal using diagram hierarchy</a></li>
+      <li><a href="navigation-hierarchy.html">Element traversal using diagram hierarchy</a></li>
       <li><a href="navigation-jump.html">Element traversal by jumping</a></li>
     </ul>
     <p>
